[project]
name = "runjob-alloydb-migration-sample"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Shunsuke Tsumori", email = "tsumori.shunsuke@gmail.com" }
]
dependencies = [
    "psycopg2-binary>=2.9.9",
    "alembic>=1.13.2",
    "sqlalchemy>=2.0.31",
]
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/runjob_alloydb_migration_sample"]
